fix: finish integrations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 server.port=8080
 
-spring.data.mongodb.uri=mongodb://mongo-database:27017/products
+##Clients endpoints - local
+spring.data.mongo.uri=mongodb://localhost:27017/product
+
+#Clients endpoints - docker
+#spring.data.mongo.uri=mongodb://mongo-database:27017/product
 
 management.endpoints.health.show-details=always
 management.endpoints.web.exposure.include=*
